# OpenGL-in-CLion

./: CMakeLists.txt  Get required package  Test main.cpp  hw3a.c
